--- a/.github/workflows/build_reusable.yml
+++ b/.github/workflows/build_reusable.yml
@@ -43,6 +43,7 @@ env:
   NEXT_SKIP_NATIVE_POSTINSTALL: 1
   TEST_TIMINGS_TOKEN: ${{ secrets.TEST_TIMINGS_TOKEN }}
   NEXT_TEST_JOB: 1
+  DATADOG_API_KEY: ${{ secrets.DATA_DOG_API_KEY }}
 
 jobs:
   build:
