--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,10 +20,11 @@ env:
   TURBO_TEAM: 'vercel'
   TURBO_REMOTE_ONLY: 'true'
   NEXT_TELEMETRY_DISABLED: 1
-  DATADOG_API_KEY: ${{ secrets.DATA_DOG_API_KEY }}
+  TEST_VALUE: 'a'
   # we build a dev binary for use in CI so skip downloading
   # canary next-swc binaries in the monorepo
   NEXT_SKIP_NATIVE_POSTINSTALL: 1
+  DATADOG_API_KEY: ${{ secrets.DATA_DOG_API_KEY }}
   TEST_TIMINGS_TOKEN: ${{ secrets.TEST_TIMINGS_TOKEN }}
   NEXT_TEST_JOB: 1
 
